--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-image-zoom": "^1.3.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.21.0",
     "swiper": "^11.0.5"
