--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.1",
     "react-icons": "^4.11.0",
     "react-image-zoom": "^1.3.1",
     "react-redux": "^8.1.3",
